--- a/src/main/resources/templates/emp/update.html
+++ b/src/main/resources/templates/emp/update.html
@@ -53,38 +53,42 @@
 				<div th:insert="~{commons/commons::sidebar(active='list')}"></div>
 
 				<main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-					<h2>Section title</h2>
-					<h3><a class="btn btn-sm btn-success" th:href="@{/emp}">添加员工</a></h3>
-					<div class="table-responsive">
-						<table class="table table-striped table-sm">
-							<thead>
-								<tr>
-									<th>id</th>
-									<th>lastName</th>
-									<th>email</th>
-									<th>gender</th>
-									<th>department</th>
-									<th>birth</th>
-									<th>操作</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr th:each="emp:${emps}">
-									<td th:text="${emp.getId()}"></td>
-									<td >[[${emp.getLastName()}]]</td>
-									<td th:text="${emp.getEmail()}"></td>
-									<td th:text="${emp.getGender()==0?'女':'男'}"></td>
-									<td th:text="${emp.getDepartment().getDepartmentName()}"></td>
-									<td th:text="${#dates.format(emp.getBirth(),'yyyy-MM-dd HH:mm:ss')}"></td>
-									<td>
-										<a class="btn btn-sm btn-primary" th:href="@{/emp/}+${emp.getId()}">编辑</a>
-										<a class="btn btn-sm btn-danger" th:href="@{/deleteEmp/}+${emp.getId()}">删除</a>
-									</td>
-								</tr>
-							</tbody>
-						</table>
+					<form th:action="@{/updateEmp}" method="post">
+					<div class="form-group">
+						<label>LastName</label>
+						<input type="hidden" name="id" th:value="${emp.getId()}">
+						<input type="text" class="form-control" name="lastName" placeholder="海绵宝宝" th:value="${emp.getLastName()}">
 					</div>
-				</main>
+					<div class="form-group">
+						<label>Email</label>
+						<input type="email" class="form-control" name="email" th:value="${emp.getEmail()}" placeholder="1176244270@qq.com">
+					</div>
+					<div class="form-group">
+						<label>Gender</label><br>
+						<div class="form-check form-check-inline">
+							<input class="form-check-input" type="radio" th:checked="${emp.getGender()==1}" name="gender" value="1">
+							<label class="form-check-label">男</label>
+						</div>
+						<div class="form-check form-check-inline">
+							<input class="form-check-input" type="radio" th:checked="${emp.getGender()==0}" name="gender" value="0">
+							<label class="form-check-label">女</label>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label>department</label>
+						<select class="form-control" name="department.id">
+							<option th:selected="${dept.getId() == emp.getDepartment().getId()}" th:each="dept:${departments}" th:text="${dept.getDepartmentName()}"
+									th:value="${dept.getId()}"></option>
+						</select>
+					</div>
+					<div class="form-group">
+						<label>Birth</label>
+						<input type="text" class="form-control" th:value="${#dates.format(emp.getBirth(),'yyyy-MM-dd HH:mm:ss')}" name="birth" placeholder="嘤嘤嘤">
+					</div>
+					<button type="submit" class="btn btn-primary">修改</button>
+					</form>
+			</main>
 			</div>
 		</div>
 
